# opuslib

./: .gitignore  .npmignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
android/src/main/cpp/: CMakeLists.txt  opus_jni_wrapper.cpp
android/src/main/java/expo/modules/opuslib/: AudioProcessor.kt  AudioRecordManager.kt  OpusEncoder.kt  OpuslibModule.kt
example/: App.tsx  metro.config.js  package-lock.json  package.json
ios/: AudioEngineManager.swift  AudioProcessor.swift  OpusCtlHelpers.h  OpusCtlHelpers.m  OpusEncoder.swift  Opuslib.podspec  OpuslibModule.swift
scripts/: build_xcframework.sh  postinstall.js
src/: Opuslib.types.ts  OpuslibModule.ts  index.ts
tests/: CMakeLists.txt  test_opus_encode_decode.c
